# project-assistant

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  RESEARCH_INTEGRATION.md  alembic.ini  docker-compose.yml  generate_secrets.sh  mcp-client-config.json  pyproject.toml
.github/workflows/: docker-image.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_project_workspace_fields.py  0003_project_workspace_name.py  0004_project_urls_thumbnail.py  0005_project_workspace_ref.py  0006_project_github_repo.py  0007_project_codespace_fields.py
scripts/: coder-setup.sh  init-secrets.py  start-server.sh  verify_env.py
src/: main.py
src/api/: main.py
src/api/middleware/: auth.py
src/api/routers/: accounts.py  auth.py  chat.py  integrations.py  projects.py
src/api/services/: user_service.py
src/api/static/: index.html  manifest.json  sw.js
src/api/static/css/: style.css
src/api/static/js/: app.js
src/clients/: coder_mcp_client.py  filesystem_client.py  git_client.py  github_client.py
src/config/: coder.py
src/core/: project_context.py  research_engine.py  suggestions.py  task_manager.py
src/core/agents/: pm_agent.py
src/core/auth/: security.py
src/models/: project.py  task.py  user.py
src/server/: mcp_server.py
src/server/tools/: intelligence_tools.py  project_tools.py  task_tools.py
src/storage/: db.py  postgres.py
tests/: test_git_client.py  test_github_client.py  test_intelligence.py  test_project_context.py  test_storage.py  test_tools.py
